[package]
name = "lark-poker"
version = "0.1.0"
edition = "2021"
description = "Texas Hold'em poker bot for Feishu (Lark) group chats"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
parking_lot = "0.12"
itertools = "0.13"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "fat"          # whole-program LTO across crates
codegen-units = 1    # one codegen unit, slowest compile / smallest+fastest binary
strip = "symbols"    # drop symbol tables from the final binary

# Faster incremental dev builds — keep dev deps in release-style optimisation
# so cargo test isn't painfully slow once we bump the release profile.
[profile.dev.package."*"]
opt-level = 1
